# Tunify-SongPlayerWebApp

./: .gitignore  README.md  pyproject.toml  start_app.bat
backend/core/: main.py
backend/utils/: gcs.py  gemini.py  mongodb.py  prompts_example.py
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: PlayerControls.tsx  PlaylistPanel.tsx  RobotIcon.tsx
frontend/app/components/configs/: robotConfig.ts
frontend/app/lib/: config.ts
